Transforma o index em lista de exemplos disponíveis

--- a/templates/demo/fatec.html
+++ b/templates/demo/fatec.html
@@ -26,6 +26,7 @@
             <tr><td>{{ value }}</td></tr>
           {% endfor %}
         </table>
+        <a href="{% url 'index' %}">Página principal</a>
       </div>
     </div>
   </body>
