--- a/templates/demo/index.html
+++ b/templates/demo/index.html
@@ -10,6 +10,7 @@
     <div class="col-md-6 col-md-offset-3">
       <ul>
         <li><a href="{% url 'fatec' %}">FATEC</a></li>
+        <li><a href="{% url 'seti' %}">SETI</a></li>
       </ul>
     </div>
   </body>
